<resources>
    <string name="app_name">BLChat</string>
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_add_friend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="menu_feedback">帮助与反馈</string>


    <!--导航栏开始-->
    <string name="tab_chat">消息</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_found">发现</string>
    <string name="tab_me">我</string>
    <!--导航栏结束-->

    <!--欢迎页面开始-->
    <string name="wel_appName">BLChat</string>
    <string name="img_info_logo"> logo </string>
    <string name="img_info_loading"> loading</string>
    <!--欢迎页面结束-->

    <!--个人主页开始-->
    <string name="user_name">Gavin 林智杰</string>
    <string name="user_id">账号:10086</string>
    <string name="txt_info">个人信息</string>
    <string name="txt_set">设置</string>
    <string name="img_info_edit"> 修改个人信息 </string>
    <string name="img_info_set">设置系统信息</string>
    <!--个人主页结束-->

    <!--发现页面开始-->
    <string name="txt_moment">Moment</string>
    <!--发现页面结束-->

    <!--朋友圈开始-->
    <string name="txt_friend_moment">天下只有两种人。比如一串葡萄到手，一种人挑最好的先吃，另一种人把最好的留到最后吃。照例第一种人应该乐观，因为他每吃一颗都是吃剩的葡萄里最好的；第二种人应该悲观，
        因为他每吃一颗都是吃剩的葡萄里最坏的。不过事实却适得其反，缘故是第二种人还有希望，第一种人只有回忆。</string>
    <string name="moment_time">6分钟前</string>
    <!--朋友圈结束-->

    <!--登陆页面开始-->
    <string name="login_txt_username">用户名：</string>
    <string name="login_txt_password">密  码：</string>
    <string name="login_inner_txt_username"> 请输入账号 </string>
    <string name="login_inner_txt_password"> 请输入密码 </string>
    <string name="btn_sign_in">登  陆</string>
    <string name="btn_sign_up">注  册</string>
    <!--登陆页面结束-->

    <!--注册页面开始-->
    <string name="sign_up_title">注册用户</string>
    <string name="sign_up_name">昵  称:</string>
    <string name="sign_up_account">账  号:</string>
    <string name="sign_up_location">城  市:</string>
    <string name="sign_up_sex">性  别:</string>
    <string name="sign_up_head">头  像:</string>
    <string name="sign_up_password">密  码:</string>
    <!--注册界面结束-->

    <!--设置页面开始-->
    <string name="setting_login_out">退出登陆</string>
    <!--设置页面结束-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expandlistview_header_new_friend">新朋友</string>
    <string name="expandlistview_header_group_chat">群聊</string>
    <string name="expandlistview_header_relation">关系</string>
    <string name="expandlistview_header_search">搜索</string>

    <string name="title_activity_login_activitya">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="friendInfor_btnSetNickName">设置备注和关系</string>
    <string name="friendInfor_location">地区</string>
    <string name="friendInfor_photo">个人相册</string>
    <string name="friendInfor_sendMsg">发消息</string>
    <string name="add_friend_radar">雷达加朋友</string>
    <string name="add_friend_radar_hint">添加身边的朋友</string>
    <string name="add_friend_face2face">面对面建群</string>
    <string name="add_friend_face2face_hint">与身边的朋友进入同一个群聊</string>
    <string name="add_friend_scan">扫一扫</string>
    <string name="add_friend_scan_hint">扫描二维码名片</string>
    <string name="add_friend_contact">手机联系人</string>
    <string name="add_friend_contact_hint">添加或邀请通讯录中的朋友</string>
    <string name="add_friend_pub_hint">获取更多资讯和服务</string>
    <string name="add_friend_pub">公众号</string>

</resources>
