<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#2095F2"
    tools:context="com.zhbit.lw.blchat.welcomePage">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="128dp"
        android:contentDescription="@string/img_info_logo"
        android:layout_height="128dp"
        android:src="@drawable/welcome_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wel_appName"
        android:textColor="#fff"
        android:textAlignment="center"
        android:layout_below="@id/logo"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <ImageView
        android:id="@+id/img_loading"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/img_info_loading"
        android:src="@drawable/loading"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"/>
</RelativeLayout>
