<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.zhbit.lw.activity.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_title"
            android:textSize="38sp"
            android:textColor="@color/textBlack"
            android:gravity="center"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_account"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edt_sgin_up_account"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edittext"
            android:layout_weight="7"
            android:padding="3dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_name"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edt_sign_up_name"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edittext"
            android:layout_weight="7"
            android:padding="3dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_password"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edt_sign_up_password"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:background="@drawable/bg_edittext"
            android:layout_weight="7"
            android:padding="3dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_sex"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edt_sign_up_sex"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edittext"
            android:layout_weight="7"
            android:padding="3dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_location"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edt_sign_up_location"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edittext"
            android:layout_weight="7"
            android:padding="3dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
        <Button
            android:id="@+id/btn_sign_up_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_warning_selector"
            android:text="@string/btn_sign_up"
            android:textColor="@color/textWhite"/>
    </LinearLayout>
</LinearLayout>
