<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="horizontal"
        android:background="@color/itemBackground"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/head"
            android:layout_gravity="center_vertical"
            android:id="@+id/userInfor_userHead"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            >
            <TextView
                android:id="@+id/userInfor_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/textBlack"
                />
            <TextView
                android:id="@+id/userInfor_userAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textItemColor"
                android:layout_marginTop="8dp"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lineLayoutEditMyInfo"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/itemBackground"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        >
        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/img_info_edit"
            android:src="@drawable/edit_person_info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            android:textColor="@color/textBlack"
            android:text="@string/txt_info"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/itemBackground"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp">
        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/set_system_info"
            android:contentDescription="@string/img_info_set"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            android:textColor="@color/textBlack"
            android:text="@string/txt_set"/>
    </LinearLayout>
</LinearLayout>
