<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.zhbit.lw.activity.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/app_icon"
        android:layout_marginTop="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="50dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_edittext"
                android:paddingLeft="48dp"
                android:textSize="18sp"
                android:hint="@string/login_inner_txt_username"
                android:imeOptions="actionDone"/>
            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/user_icon"
                android:layout_marginTop="3dp"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_edittext"
                android:inputType="textPassword"
                android:paddingLeft="48dp"
                android:hint="@string/login_inner_txt_password"
                android:textSize="18sp" />
            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/lock_icon"
                android:layout_marginTop="3dp"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="15dp">
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_primary_selector"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/btn_sign_in"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="15dp">
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_warning_selector"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/btn_sign_up"/>
    </LinearLayout>
</LinearLayout>
